Implemented user dashboard and campaign management

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,5 @@
+{% extends 'base.html' %}
 {% load crispy_forms_tags %}
-{% extends 'main_app/base.html' %}
-
 {% block title %}Home{% endblock %}
 
 {% block content %}
