--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -16,7 +16,10 @@
             <div>
                 {% if user.is_authenticated %}
                     <a href="{% url 'dashboard' %}" class="mr-4">Dashboard</a>
-                    <a href="{% url 'logout' %}" class="text-red-500">Logout</a>
+                    <form action="{% url 'logout' %}" method="post" class="inline">
+                        {% csrf_token %}
+                        <button type="submit" class="text-red-500">Logout</button>
+                    </form>
                 {% else %}
                     <a href="{% url 'login' %}" class="mr-4">Login</a>
                     <a href="{% url 'register' %}">Register</a>
